// Title       : MatchState.cs
// Author      : Sadikur Rahman
// Description : Enum to represent different match states.

public enum MatchState
{
    WaitingToStart,
    InProgress,
    Finished
}